// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`If condition is false then show text: No World 1`] = `
<div>
  <div>
    No World
  </div>
</div>
`;

exports[`If condition is true then show text: Hello World 1`] = `
<div>
  <div>
    Hello
  </div>
  <p>
    World
  </p>
</div>
`;

exports[`If condition is true then show text: ok 1`] = `
<div>
   ok
</div>
`;

exports[`If no condition then return null 1`] = `<div />`;
